--- a/src/less/grid.less
+++ b/src/less/grid.less
@@ -191,7 +191,7 @@ div.main-wrapper {
     }
 
     .live-cell {
-      background-color: lighten(yellow, 20%);
+      background-color: white;
     }
   }
 }
