--- a/src/less/grid.less
+++ b/src/less/grid.less
@@ -99,6 +99,7 @@ div.main-wrapper {
           height: 27px;
           border: none;
           border-radius: 4px;
+          outline: none;
         }
         .stop-button,
         .reset-button {
@@ -147,6 +148,15 @@ div.main-wrapper {
             background-color: silver;
           }
         }
+      }
+      .random-seed {
+        height: 27px;
+        border: none;
+        border-radius: 4px;
+        outline: none;
+        margin-top: 15px;
+        width: 100%;
+        background-color: @selective-yellow;
       }
 
       .message {
